NatLab: Add telio version compatibility test (3.6 with 4.x)
Signed-off-by: Arvydas Vencius <arvydas.vencius@nordsec.com>

--- a/nat-lab/deps/Dockerfile
+++ b/nat-lab/deps/Dockerfile
@@ -80,7 +80,8 @@ RUN \
     sed -i 's/\/sbin\/iptables/\/usr\/sbin\/iptables/g' /etc/upnpd.conf
 
 RUN \
-    ./install_stun_server.sh
+    ./install_stun_server.sh && \
+    rm install_stun_server.sh
 
 RUN \
     cd /opt/iptables && \
