--- a/crates/telio-model/Cargo.toml
+++ b/crates/telio-model/Cargo.toml
@@ -11,7 +11,7 @@ publish = false
 pretend_to_be_macos = []
 
 [dependencies]
-log = {version = "0.4.14", features = ["release_max_level_debug"]}
+log = { version = "0.4.14", features = ["release_max_level_debug"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_with = "1.10"
 serde_json = "1.0"
@@ -19,6 +19,7 @@ strum = { version = "0.24.0", features = ["derive"] }
 strum_macros = "0.24"
 ipnetwork = "0.18"
 modifier = "0.1.0"
+num_enum = "0.6.1"
 itertools = "0.10"
 
 telio-crypto = { version = "0.1.0", path = "../telio-crypto" }
