--- a/.github/workflows/gitlab.yml
+++ b/.github/workflows/gitlab.yml
@@ -13,7 +13,7 @@ jobs:
       (
         github.event_name == 'pull_request_target' &&
         github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name &&
-        contains(github.event.pull_request.labels.*.name, 'run tests')
+        github.event.label.name == 'run tests'
       )
     steps:
       - uses: NordSecurity/trigger-gitlab-pipeline@fd24fd4a3d03065fe67ae1e98d05d4283d7bb104 # v1
